--- a/requirements.txt
+++ b/requirements.txt
@@ -5,4 +5,5 @@ google-cloud-storage==1.13.2
 google-cloud-datastore==1.7.3
 google-cloud-error-reporting==0.30.1
 google-cloud-logging==1.10.0
+google-cloud-translate==1.5.0
 flask-cors
